Project pronto versão desktop

--- a/index.html
+++ b/index.html
@@ -14,20 +14,116 @@
                 <img src="IMG/logo.png" alt="" class="logo">
             </div>
             <a href="#" class="item">INICIO</a>
-            <a href="#" class="item">SOBRE NÓS</a>
+            <a href="#" class="item">NOSSA COMIDA</a>
             <a href="#" class="item">NOSSA EQUIPE</a>
             <a href="#" class="item">NOSSOS PRATOS</a>
-            <a href="#" class="item">CONTATO</a>
+            <a href="#contato" class="item">CONTATO</a>
         </nav>
     </header>
 
     <div class="divisao"></div>
 
     <main>
+        <section id="sobre" class="section">
+            <div class="container grid">
+                <div class="imagem">
+                    <img src="IMG/01.png" alt="" class="sobreNos">
+                </div>
+                <div class="textos">
+                    <h2 class="titulo">NOSSA COMIDA CASEIRA</h2>
+                    <p class="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia eaque deserunt saepe reprehenderit dicta dolor suscipit perferendis, voluptatem voluptates laborum exercitationem est expedita dolore, impedit nesciunt minima, fugit a veniam. suscipit perferendis, voluptatem voluptates laborum exercitationem est expedita dolore, impedit nesciunt minima, fugit a veniam.</p>
+                </div>
+            </div>
+        </section>
+        <section id="equipe" class="section">
+            <div class="container grid">
+                <div class="textos">
+                    <h2 class="titulo">NOSSA EQUIPE</h2>
+                    <p class="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia eaque deserunt saepe reprehenderit dicta dolor suscipit perferendis, voluptatem voluptates laborum exercitationem est expedita dolore, impedit nesciunt minima, fugit a veniam. suscipit perferendis, voluptatem voluptates laborum exercitationem est expedita </p>
+                    <p class="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia eaque deserunt saepe reprehenderit dicta dolor suscipit perferendis, voluptatem voluptates laborum exercitationem est expedita dolore, impedit nesciunt minima, fugit a veniam. suscipit perferendis, voluptatem voluptates laborum exercitationem est expedita dolore, impedit nesciunt minima, fugit a veniam.</p>
+                </div>
+                <div class="imagem">
+                    <img src="IMG/02.png" alt="" class="equipe">
+                </div>
+            </div>
+        </section>
 
+        <section id="cardapio" class="section">
+            <div class="grid">
+                <div class="textos">
+                    <h2 class="titulo">NOSSO CARDÁPIO</h2>
+                </div>
+                <div class="pratos">
+                    <div class="prato">
+                        <img src="IMG/prato1.png" alt="" class="comida">
+                        <h4 class="lorem">Lorem Ipsum</h4>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur sit adipisicing elit. Natus sit facilis atque fugiat, quasi earum eos alias</p> 
+                        <p class="preco">R$XXX.XX</p>
+                    </div>
+                    <div class="prato">
+                        <img src="IMG/prato2.png" alt="" class="comida">
+                        <h4 class="lorem">Lorem Ipsum</h4>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur sit adipisicing elit. Natus sit facilis atque fugiat, quasi earum eos alias</p> 
+                        <p class="preco">R$XXX.XX</p>
+                    </div>
+                    <div class="prato">
+                        <img src="IMG/prato3.png" alt="" class="comida">
+                        <h4 class="lorem">Lorem Ipsum</h4>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur sit adipisicing elit. Natus sit facilis atque fugiat, quasi earum eos alias</p> 
+                        <p class="preco">R$XXX.XX</p>
+                    </div>
+                    <div class="prato">
+                        <img src="IMG/prato4.png" alt="" class="comida">
+                        <h4 class="lorem">Lorem Ipsum</h4>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur sit adipisicing elit. Natus sit facilis atque fugiat, quasi earum eos alias</p> 
+                        <p class="preco">R$XXX.XX</p>
+                    </div>
+                    <div class="prato">
+                        <img src="IMG/prato5.png" alt="" class="comida">
+                        <h4 class="lorem">Lorem Ipsum</h4>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur sit adipisicing elit. Natus sit facilis atque fugiat, quasi earum eos alias</p> 
+                        <p class="preco">R$XXX.XX</p>
+                    </div>
+                    <div class="prato">
+                        <img src="IMG/prato6.png" alt="" class="comida">
+                        <h4 class="lorem">Lorem Ipsum</h4>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur sit adipisicing elit. Natus sit facilis atque fugiat, quasi earum eos alias</p> 
+                        <p class="preco">R$XXX.XX</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
 
+    <footer>
+        <section id="contato" class="section">
+            <div class="container">
+                <div class="nome">
+                    <h1 class="amm">ANA MÔNICA MATOS</h1>
+                    <h4 class="cs">COMIDA CASEIRA</h4>
+                </div>
+                <div class="redes">
+                    <div class="insta">
+                        <img src="IMG/insta.svg" alt="" class="rede instagram">
+                        <p class="rede-insta">AMM_COMIDACASEIRA</p>
+                    </div>
+                    <div class="face">
+                        <img src="IMG/facebook.svg" alt="" class="rede facebook">
+                        <p class="rede-face">AMM_COMIDACASEIRA</p>
+                    </div>
+                    <div class="tel">
+                        <img src="IMG/telefone.svg" alt="" class="rede telefone">
+                        <p class="rede-tel">(11) 95918-4371</p>
+                    </div>
+                </div>
+                <div class="endereco">
+                    <h4 class="endereco-titulo">ENDEREÇO:</h4>
+                    <p class="endereco-descricao">
+                        RUA Regina Cabalau Mendonça, 18 - Vila Bela Vista, Suzano - SP, 08664-140
+                    </p>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 
